--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/tcly861204/node-collection-blog#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
+    "nodemailer": "^6.7.2",
     "request": "^2.88.2"
   }
 }
