--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "request": "^2.88.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.4"
   }
 }
