--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           node-version: '14.x'
 
+      - name: "env"
+        run: echo ${{ secrets.QQ_PASS }} >> pass.txt
+
       - name: Install
         run: npm install # 安装依赖
       
