--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,11 +19,8 @@ jobs:
 
       - name: Install
         run: npm install # 安装依赖
-        
-      - name: Env
-        uses: ./
-        with:
-          QQ_PASS: ${{secrets.QQ_PASS}}
 
       - name: Build
-        run: npm run build -model $pass
+        env:
+          QQ_PASS: ${{secrets.QQ_PASS}}
+        run: npm run build
