--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,9 @@ on:
     # 定时任务，在每天的5点推送信息到邮箱
     - cron: '0 21 * * *'
 
+env:
+    cache-name: note
+    
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,6 +19,21 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
+  
+      - name: Cache nodemodules
+        uses: actions/cache@v1
+        env:
+            cache-name: cache-node-modules
+        with:
+            # 需要缓存的文件的路径
+            path: ./node_modules 
+            # 对缓存的文件指定的唯一标识
+            key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('./package.json') }} 
+            # 用于没有再找目标key的缓存的backup选项
+            restore-keys: |
+                ${{ runner.os }}-build-${{ env.cache-name }}-
+                ${{ runner.os }}-build-
+                ${{ runner.os }}-
 
       - name: Install
         run: npm install # 安装依赖
