--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "采集博客",
   "main": "main.js",
+  "keywords": ["nodemailer", "cheerio", "request"],
   "scripts": {
     "build": "ts-node ./src/main.ts"
   },
