feat: 优化代码结构

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "keywords": ["nodemailer", "cheerio", "request"],
   "scripts": {
-    "build": "ts-node ./src/main.ts"
+    "clean": "rm -rf ./dist",
+    "build": "npm run clean && ts-node ./src/main.ts"
   },
   "repository": {
     "type": "git",
