feat: 优化网页版样式

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build": "npm run clean && ts-node ./src/main.ts"
+    "build": "npm run clean && ts-node ./src/main.ts",
+    "postbuild": "cp favicon.ico ./dist"
   },
   "repository": {
     "type": "git",
