feat: 优化网页端界面

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "ts-node ./src/main.ts",
-    "postbuild": "cp favicon.ico ./dist"
+    "postbuild": "cp -R public ./dist"
   },
   "repository": {
     "type": "git",
