feat: 优化前端页面展示

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "request"
   ],
   "scripts": {
+    "prebuild": "rm -rf dist",
     "build": "ts-node ./src/main.ts",
     "postbuild": "cp -R public ./dist"
   },
