--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,15 +13,16 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup Node.js v14.x
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: '14.x'
+          node-version: '16'
+      
+      - name: Version
+        run: node -v
   
       - name: Cache nodemodules
-        uses: actions/cache@v1
+        uses: actions/cache@v3
         env:
             cache-name: cache-node-modules
         with:
