--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "dependencies": {
     "@types/node": "^17.0.10",
     "@types/request": "^2.48.8",
+    "@types/superagent": "^4.1.16",
     "cheerio": "^1.0.0-rc.10",
     "nodemailer": "^6.7.2",
     "request": "^2.88.2",
+    "superagent": "^8.0.9",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
