--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "request"
   ],
   "scripts": {
+    "dev": "ts-node ./src/main.ts",
     "prebuild": "rm -rf dist",
     "build": "ts-node ./src/main.ts",
     "postbuild": "cp -R public ./dist"
